<resources>
    <string name="app_name">JGameTest</string>

    <string name="button_ok">OK</string>

    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_resume">Resume</string>
    <string name="menu_easy">Easy</string>
    <string name="menu_medium">Medium</string>
    <string name="menu_hard">Hard</string>

    <string name="mode_ready">Lunar Lander\nPress Button To Play</string>
    <string name="mode_pause">Paused\nPress Button To Resume</string>
    <string name="mode_lose">Game Over\nPress Button To Play</string>
    <string name="mode_win_prefix">Success!\n</string>
    <string name="mode_win_suffix">Success!\nPress Button to Play</string>

    <string name="message_stopped">Stopped</string>
    <string name="message_off_pad">Off Landing Pad</string>
    <string name="message_too_fast">Too Fast</string>
    <string name="message_bad_angle">Bad Angle</string>

    <string name="lunar_layout_text_text"> </string>
    <string name="progress_desc">第%1$s进度：%2$d%%</string>
    <string name="first">一</string>
    <string name="second">二</string>
    <string name="from_sp">%s (from sp)</string>
    <string name="book_price">$%s</string>
    <string name="book_index">Index</string>
    <string name="book_name">Name</string>
    <string name="book_author">Author</string>
    <string name="book_pages">Pages</string>
    <string name="book_price_text">Price</string>
</resources>
