<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/j_book_item_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:gravity="center"
        android:text="@string/book_index"/>

    <TextView
        android:id="@+id/j_book_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="1dp"
        android:gravity="center"
        android:text="@string/book_name"/>

    <TextView
        android:id="@+id/j_book_item_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_cell_padding"
        android:gravity="center"
        android:text="@string/book_author"/>

    <TextView
        android:id="@+id/j_book_item_pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_cell_padding"
        android:gravity="center"
        android:text="@string/book_pages"/>

    <TextView
        android:id="@+id/j_book_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_cell_padding"
        android:gravity="center"
        android:text="@string/book_price_text"/>

</LinearLayout>